--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+THINGS TO CONSIDER:
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+- Terminal: rails db => add POSTGRESQL database to your database
+- Tables for ActiveRecord objects are named in plural form by default. e.g. Users. This naming convention was circumvented by adding "ActiveRecord::Base.pluralize_table_names = false" to your config/environment.rb, which will disable pluralization for all ActiveRecord objects.
