--- a/README.rdoc
+++ b/README.rdoc
@@ -4,3 +4,7 @@ THINGS TO CONSIDER:
 
 - Terminal: rails db => add POSTGRESQL database to your database
 - Tables for ActiveRecord objects are named in plural form by default. e.g. Users. This naming convention was circumvented by adding "ActiveRecord::Base.pluralize_table_names = false" to your config/environment.rb, which will disable pluralization for all ActiveRecord objects.
+
+- Need to create models based on "ActiveRecord::Base.connection.tables".  This is a list of all the models and I need to convert all my tables into models (including taking the '_' and converting the next letter to a capital letter)
+
+- Call on every column in every table via looping through "ActiveRecord::Base.connection.tables[i].column_names" ("i = ActiveRecord::Base.connection.tables.count"), which gets all the column names.
